ros2_ws/log/build_2025-03-20_13-59-57/lane_detector/stderr.log
  File "/home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector/lane_detector.py", line 37
    result_img = cv2.cvtColor(edges, cv2.COLOR_GRAY2BGR) Quitamos el canny para que vea mejorlas lineas
                                                         ^^^^^^^^
SyntaxError: invalid syntax

